src/objects/ADBEpmpPreferenceParams__mdt.object
<CustomObject>
    <description>Store Endpoint and request/constant paramaters for the Epmp Preference service</description>
    <fields>
        <fullName>Actor__c</fullName>
        <description>Store constant value for Actor - Epmp Preference</description>
        <label>Actor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>calling_app_name__c</fullName>
        <description>store calling_app_name constant request parameter value</description>
        <label>calling_app_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endpoint__c</fullName>
        <description>store endpoint for the epmp service</description>
        <label>endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_id__c</fullName>
        <label>user_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_type__c</fullName>
        <label>user_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ADBEpmpPreferenceParams</label>
    <pluralLabel>ADBEpmpPreferenceParams</pluralLabel>
</CustomObject>